2007-10-13  Sven Herzberg  <herzi@gnome-de.org>

	Reviewed by Tim Janik.

	Created marshallers that don't throw gcc warnings when compiling with
	-WUnused (fixes #359165).

	* gobject/glib-genmarshal.c: decorate return_value and invocation_hint
	with G_GNUC_UNUSED

2007-10-04  Tor Lillqvist  <tml@novell.com>

	* glibconfig.h.win32.in: Always define G_CAN_INLINE. Even MSVC6 is
	capable of inlining. (#483337, Steve Lhomme)

2007-09-19  Behdad Esfahbod  <behdad@gnome.org>

	* glib/ghook.c (g_hook_free): Check for NULL finalizer. (#476849, Areg
	Beketovski)

2007-09-19  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.1 ===

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h (GUserDirectory): Fix doc formatting.
	* glib/gmain.c (g_main_depth): Fix doc formatting.

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Replace -pthread by -lpthread for 
	Freebsd, too.  (#475619, Roy Marples)

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: When compiling against system pcre, 
	add a private dependency to the pc file. This should
	fix static builds with system pcre.  (#475923)

	* glib-2.0.pc.in: Add a Requires.private line

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-09-14 15:07:28  Tim Janik  <timj@gtk.org>

	* glib/gutf8.c (g_utf8_strreverse): applied fix for bug #476840.

	* tests/utf8-pointer.c (test_misc): added test for g_utf8_strreverse().

2007-09-11  Marco Barisione <marco@barisione.org>

	* glib/Makefile.am:
	* configure.in: propagate the pcre flags to libglib and not to all
	parts of glib. (#475854, dmacks@netspace.org)

	* configure.in: fix a typo in the previous commit. (#475854, comment
	#4)

2007-09-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Define G_ATOMIC_ARM.

	* glib/gatomic.c: Add Arm implementation of atomic
	operations.  (#457601, Jussi Laako)

2007-09-10  Marco Barisione <marco@barisione.org>
